...
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:hapticFeedbackEnabled="true"
                android:scaleX="1"
                android:scaleY="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/nav_profile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardView2"
                app:srcCompat="@drawable/ic_home_black_24dp" />

            <ImageButton
                android:id="@+id/nav_followingBtn"
...
